--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="car.css">
 </head>
 <body>
-    <div>
+    
     <div><img src="car.jpeg" alt="car"></div>
     <div><img src="car1.jpeg" alt="car"></div>
-    <div><img src="car2.jpeg" alt="car"></div></div>
-    <div><div><img src="car3.webp" alt="car"></div>
+    <div><img src="car2.jpeg" alt="car"></div>
+    <div><img src="car3.webp" alt="car"></div>
     <div><img src="car4.jpeg" alt="car"></div>
-    <div><img src="car5.jpeg" alt="car"></div></div>
+    <div><img src="car5.jpeg" alt="car"></div>
 </body>
 </html>
